public/css/main.css
/* ... */
#welcomeModal .modal-content .modal-header h2 {
  color: #fff;
  font-size: 22px;
  font-weight: 700;
  margin-bottom: 0;
}

#welcomeModal .modal-content .modal-body {
  color: #464646;
  font-size: 18px;
  line-height: 27px;
  padding: 24px 32px;
}

#welcomeModal .modal-content .modal-body p {
  margin: 0 0 34px;
}

#welcomeModal .modal-content .modal-body .btn {
  width: 100%;
}

.profile-view .name {
  font-size: 32px;
  font-weight: 900;
  margin: 0 0 16px;
}

.profile-view .company,
.profile-view .network {
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  margin: 0 0 20px;
}

.profile-view .company {
  margin: 0;
}

.profile-view .information {
  font-family: 'Circular Std Book';
  font-size: 15px;
  line-height: 20px;
  margin: 0 0 28px;
}

.profile-view .expertise .expertise-title {
  font-size: 16px;
  font-weight: bold;
  margin: 0 0 19px;
}

.profile-view .expertise ul {
  margin: -15px 0 46px;
}

.profile-view .expertise ul li {
  border: solid 1px #464646;
  font-family: 'Circular Std Book';
  color: #464646;
  display: inline-block;
  font-size: 14.5px;
  margin-right: 6px;
  margin-top: 12px;
  padding: 1px 13px;
  text-align: center;
}

.profile-view .network .network-title {
  font-size: 16px;
  font-weight: bold;
  margin: 0 0 19px;
}

.profile-view .network ul {
  margin: 0 0 46px;
}

.profile-view .network ul li {
  justify-content: flex-start;
  margin-bottom: 21px;
}

.profile-view .network ul img {
  display: block;
  height: 60px;
  margin-right: 15px;
  width: 60px;
}

.profile-view .network ul h5.title {
  color: #464646;
  font-size: 15px;
  font-weight: 500;
  line-height: 20px;
  margin: 0;
  text-align: left;
}

.profile-view .network ul p {
  color: #646464;
  font-family: 'Circular Std Book';
  font-size: 14px;
  line-height: 20px;
  margin: 0;
}

.profile-view .profile-actions > div {
  position: fixed;
  top: 50%;
  transform: translate(0, -50%);
}

.profile-view .profile-actions .profile-images {
  margin-bottom: 40px;
  position: relative;
}

.profile-view .profile-actions .profile-images .profile-image {
  border-radius: 50%;
  display: block;
  object-fit: cover;
  max-width: 100%;
  z-index: 0;
}

.profile-actions .profile-images .profile-network {
  border: 4px solid #fff;
  bottom: 0;
  height: 70px;
  position: absolute;
  right: 0;
  width: 70px;
  z-index: 1;
}

.profile-actions .actions .favorite {
  color: #57afca;
  cursor: pointer;
  font-size: 52px;
  margin-right: 10px;
}

.profile-actions .actions .btn {
  margin-left: 8px;
}

.profile-actions .edit-profile {
  text-align: center;
}

.profile-actions .edit-profile .ng-fa-icon,
.profile-actions .edit-profile a {
  color: #57afca;
  font-size: 17px;
  font-weight: 500;
}

.popover {
  background-color: #025069;
  border: solid 1px #025069;
  box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.15);
  height: 160px;
  height: initial;
  margin-top: 25px;
  max-width: 100%;
  padding: 18px 22px;
}

.popover.bs-popover-bottom .arrow {
  left: 90% !important;
}

.popover-body {
  padding: 0;
}

.bs-popover-bottom .arrow::after {
  border-bottom-color: #025069;
}

.welcome-wrapper h2 {
  color: #67c7e5;
  font-size: 18px;
  font-weight: 900;
  margin: 0 0 18px;
}

.welcome-wrapper .icon-row {
  flex-wrap: wrap;
}

.welcome-wrapper .icon-row > div {
  flex: 1 1 0;
  margin-right: 4px;
  text-align: center;
}

.welcome-wrapper .icon-row > div > div {
  color: #fff;
  font-family: 'Circular Std';
  font-size: 12px;
  line-height: 15px;
  margin-top: 8px;
}

.welcome-wrapper .icon-row > div:last-child {
  margin-right: 0;
}

.welcome-wrapper button {
  background: transparent;
  border: solid 1px #fff;
  color: #fff;
  cursor: pointer;
  font-size: 14px;
  height: 30px;
  margin-top: 24px;
  width: 86px;
}

.welcome-wrapper-2 {
  height: 136px;
  margin-right: -20px;
  max-width: 300px;
}

.welcome-wrapper-2 img {
  width: 26px;
  height: 21.3px;
  margin-right: 8px;
}

.welcome-wrapper-2 p {
  color: #fff;
  font-size: 14px;
  font-family: 'Circular Std Book';
}

.welcome-wrapper-2 button {
  margin-top: 14px;
}
/* ==========================================================================
   Dashboard
   ========================================================================== */
.dashboard h2 {
  color: #464646;
  font-size: 24px;
  font-weight: bold;
  margin: 16px 16px 32px;
}

.dashboard h2 span {
  font-weight: 500;
}

.dashboard .profile-information > div {
  max-width: 168px;
  position: fixed;
}

.dashboard .profile-information img {
  border-radius: 50%;
  height: 138px;
  margin: 0 auto 32px;
  width: 138px;
  display: block;
}

.dashboard .profile-information .navigation h3 {
  border-bottom: 3px solid #646464;
  color: #646464;
  font-size: 15px;
  font-weight: bold;
  margin: 0 0 16px;
  padding-bottom: 3px;
  text-transform: uppercase;
}

.dashboard .profile-information .navigation li {
  margin-bottom: 16px;
}

.dashboard .profile-information .navigation li a {
  color: #646464;
  display: block;
  font-size: 16px;
  font-weight: 500;
  line-height: 16px;
  text-transform: capitalize;
  transition: color 0.3s ease-in-out;
  max-width: 130px;
}

.dashboard .profile-information .navigation li a .badge {
  background-color: #57afca;
  border-radius: initial;
  color: #fff;
  float: right;
  font-size: 13px;
  font-weight: normal;
  height: 18px;
  text-align: center;
  width: 18px;
}

.dashboard .profile-information .navigation li.active a,
.dashboard .profile-information .navigation li:hover a {
  color: #025069;
}
/* ==========================================================================
   Card
   ========================================================================== */
.card {
  background-color: #fff;
  border: 1px solid #d2d2d2;
  border-radius: 4px;
  box-sizing: border-box;
  flex: 1 1 0;
  margin-bottom: 32px;
}

.card .card-header {
  background-color: initial;
  border-bottom: 1px solid #d2d2d2;
  padding: 8px 24px;
}
/* ... */

